Added stylish animation for logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <title>Пикчи нет!</title>
+  <title>Главная - Пикчи нет!</title>
 </head>
 
 <body>
@@ -38,8 +38,9 @@
     <!--Меню-->
     <div id="menuSideNav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#"><i class="fa fa-home" aria-hidden="true"></i>&ensp;ГЛАВНАЯ</a>
-      <a href="#"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;ЛАБОРАТОРИЯ</a>
+      <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>&ensp;ГЛАВНАЯ</a>
+      <a href="lab.html"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;ЛАБОРАТОРИЯ</a>
+      <a href="#"><i class="fa fa-question" aria-hidden="true"></i>&ensp;О САЙТЕ</a>
       <a href="#"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;НАСТРОЙКИ</a>
     </div>
 
@@ -63,7 +64,7 @@
             <div class="col-md-6">
               <div class="card post d-flex flex-row">
                 <div class="tool-panel">
-                  <div class="rate">
+                  <div class="rate mt-2">
                     <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                     <br>127<br>
                     <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
@@ -72,13 +73,13 @@
                 </div>
                 <div class="card-body">
                   <ul class="card-top">
-                    <li><a href="" class="card-title"><span class="badge rbc">РБК</span></a></li>
+                    <li><a href=""><span class="badge rbc">РБК</span></a></li>
                     <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
                   </ul>
                   <p class="card-text">Сотрудника ядерного центра в Сарове оштрафовали на 450 тысяч рублей за попытку майнинга биткоинов на суперкомпьютере мощностью один петафлопс</p>
                   <img src="img/mine.jpg" alt="...">
                   <hr>
-                  <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                  <p class="card-text"><small class="text-muted">Пикчер: Yotchikov</small></p>
                 </div>
               </div>
             </div>
@@ -86,7 +87,7 @@
             <div class="col-md-6">
               <div class="card post d-flex flex-row">
                 <div class="tool-panel">
-                  <div class="rate">
+                  <div class="rate mt-2">
                     <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                     <br>42<br>
                     <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
@@ -94,13 +95,13 @@
                 </div>
                 <div class="card-body">
                   <ul class="card-top">
-                    <li><a href="" class="card-title"><span class="badge meduza">Meduza</span></a></li>
+                    <li><a href=""><span class="badge meduza">Meduza</span></a></li>
                     <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
                   </ul>
                   <p class="card-text">Власти Москвы всё-таки согласовали на 4 ноября проведение «Русского марша» в районе Люблино</p>
                   <img src="./img/rus.jpg" alt="...">
                   <hr>
-                  <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+                  <p class="card-text"><small class="text-muted">Пикчер: Yotchikov</small></p>
                 </div>
               </div>
             </div>
@@ -112,11 +113,11 @@
             <hr class="divider">
             <h4>ТОП</h4>
             <div class="list-group top-list">
-              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: gold"></i>&ensp;@Yotchikov</a>
-              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: silver"></i>&ensp;@MC_Zlodeykin</a>
-              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: #CD7F32"></i>&ensp;@Cookied</a>
-              <a href="#" class="list-group-item list-group-item-action">@Rudy</a>
-              <a href="#" class="list-group-item list-group-item-action">@Zibra72</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: gold"></i>&ensp;Yotchikov</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: silver"></i>&ensp;MC_Zlodeykin</a>
+              <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-trophy" aria-hidden="true" style="color: #CD7F32"></i>&ensp;Cookied</a>
+              <a href="#" class="list-group-item list-group-item-action">Rudy</a>
+              <a href="#" class="list-group-item list-group-item-action">Zibra72</a>
             </div>
             <hr class="divider">
             <ul class="list-unstyled">
@@ -127,13 +128,12 @@
           </div>
         </div>
       </div>
-      <!--#ПОЛИТИКА-->
       <div class="row">
         <!--Без пикчи-->
         <div class="col-md-3">
-          <div class="without-picture">
+          <div class="sticky-header">
             <hr class="divider">
-            <h4>БЕЗ ПИКЧИ</h4>
+            <h4>ПИКЧИ НЕТ</h4>
             <div class="list-group top-list">
               <a href="#" class="list-group-item list-group-item-action">Путин рассказал об избежавшей рецессии российской экономике</a>
               <a href="#" class="list-group-item list-group-item-action">В Киеве пригрозили отреагировать на запуск поездов по Крымскому мосту</a>
@@ -143,18 +143,19 @@
             </div>
           </div>
         </div>
+        <!--Посты-->
         <div class="col-md-7">
+          <!--#ПОЛИТИКА-->
           <hr class="divider">
           <div class="d-flex justify-content-between align-middle">
-            <h4 class="d-inline mt-0">#ПОЛИТИКА</h4>
+            <h4 class="d-inline mt-0">ПИКЧА ЕСТЬ</h4>
             <div>
-              <button type="button" class="btn btn-link slide-arrow mr-1"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-              <button type="button" class="btn btn-link slide-arrow ml-1"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+              <button type="button" class="btn btn-link feed-settings"><i class="fa fa-cog" aria-hidden="true"></i></button>
             </div>
           </div>
           <div class="card post d-flex flex-row">
             <div class="tool-panel">
-              <div class="rate">
+              <div class="sticky-header rate mt-2">
                 <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                 <br>127<br>
                 <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
@@ -162,18 +163,18 @@
             </div>
             <div class="card-body">
               <ul class="card-top">
-                <li><a href="" class="card-title"><span class="badge vedomosti">Ведомости</span></a></li>
+                <li><a href=""><span class="badge vedomosti">Ведомости</span></a></li>
                 <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
               </ul>
               <p class="card-text">Минпромторг предлагает установить квоты на госзакупки отечественного</p>
               <img src="img/importo.jpg" alt="...">
               <hr>
-              <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+              <p class="card-text"><small class="text-muted">Пикчер: Yotchikov</small></p>
             </div>
           </div>
           <div class="card post d-flex flex-row">
             <div class="tool-panel">
-              <div class="rate">
+              <div class="sticky-header rate mt-2">
                 <button type="button" class="btn btn-link btn-up"><i class="fa fa-chevron-up" aria-hidden="true"></i></button>
                 <br>127<br>
                 <button type="button" class="btn btn-link btn-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
@@ -181,13 +182,13 @@
             </div>
             <div class="card-body">
               <ul class="card-top">
-                <li><a href="" class="card-title"><span class="badge vedomosti">Ведомости</span></a></li>
-                <li><a href="" class="card-hashtag">#ПОЛИТИКА</a></li>
+                <li><a href=""><span class="badge mediazona">Медиазона</span></a></li>
+                <li><a href="" class="card-hashtag">#ПРОИСШЕСТВИЯ</a></li>
               </ul>
-              <p class="card-text">Минпромторг предлагает установить квоты на госзакупки отечественного</p>
-              <img src="img/importo.jpg" alt="...">
+              <p class="card-text">Депутат из Нарьян‑Мара получил 9 лет колонии за продажу гашиша в подъезде</p>
+              <img src="img/torch.jpg" alt="...">
               <hr>
-              <p class="card-text"><small class="text-muted">Пикчер: @Yotchikov</small></p>
+              <p class="card-text"><small class="text-muted">Пикчер: Yotchikov</small></p>
             </div>
           </div>
         </div>
