--- a/lab.html
+++ b/lab.html
@@ -1,70 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: "Lato", sans-serif;
-}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Montserrat:500|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <script src="./scripts/animation.js" charset="utf-8"></script>
+  <script src="./scripts/sidenav.js" charset="utf-8"></script>
+  <script src="./scripts/sticky.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  <link rel="stylesheet" type="text/css" href="./styles/brands.css">
+  <script src="https://use.fontawesome.com/bb8cf7377d.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <title>Лаборатория - Пикчи нет!</title>
 </head>
+
 <body>
+  <!--Навигационная панель-->
+  <div id="page" style="left: 0; right: 0;">
+    <div id="bg-dark" onclick="closeNav()"></div>
+    <nav class="navbar sticky-top navbar-top">
+      <button type="button" class="btn btn-link btn-menu mr-3" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></button>
+      <a class="navbar-brand" href="#">_</a>
+      <div class="ml-auto">
+        <form class="form-inline d-inline-flex">
+          <input class="form-control" type="search" placeholder="Поиск" aria-label="Search">
+        </form>
+        <a class="btn btn-link btn-menu ml-3" href="#" role="button"><i class="fa fa-user"></i>&ensp;ВОЙТИ</a>
+      </div>
+    </nav>
 
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-</div>
+    <!--Тело сайта-->
+    <!--Меню-->
+    <div id="menuSideNav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>&ensp;ГЛАВНАЯ</a>
+      <a href="lab.html"><i class="fa fa-flask" aria-hidden="true"></i>&ensp;ЛАБОРАТОРИЯ</a>
+      <a href="#"><i class="fa fa-question" aria-hidden="true"></i>&ensp;О САЙТЕ</a>
+      <a href="#"><i class="fa fa-cog" aria-hidden="true"></i>&ensp;НАСТРОЙКИ</a>
+    </div>
 
-<h2>Animated Sidenav Example</h2>
-<p>Click on the element below to open the side navigation menu.</p>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-
-<script>
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-}
-
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-}
-</script>
-
+    <!--Страница-->
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col">This will be centered vertically and horizontally</div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
